# src/binance/response/http-response.dto.ts
@@ -1,0 +1,15 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { CreateUserDto } from "src/users/dto/create-user.dto";
+export class HttpResponseLocalDto {
+    @ApiProperty({ type: CreateUserDto })
+    user: CreateUserDto;
+
+    @ApiProperty({ type: String })
+    response: string
+
+    @ApiProperty({ type: Date })
+    date: Date
+
+    @ApiProperty({ default: false, type: String })
+    additionalMessage?: string
+}
